Fix bug in getExtract